--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
+*{
+  padding: 0;
+  margin: 0;
+}
+body{
+  min-height: 100vh;
+  background-image:linear-gradient(to bottom,rgb(130,235,235)1%,pink 50%,rgb(130,235,235));
+}
+.displayc{
+  margin: 40px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: bold;
+}
+#Navbar{
+  background-color: rgb(13,55,119);
+  padding: 5px;
+  margin-bottom: 3rem;
+  font-family: 'Courgette',cursive;
+  display: flex;
+  justify-content: space-around;
+}
+.active{
+  color: red;
+}
+.notactive{
+  color:white;
+}
+.active:hover{
+  color:'white';
+  text-shadow:1px 1px 15px red;
+}
+
+.header1{
+  font-size: 26px;
+  font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  margin: 20px;
+  justify-content: space-around;
+}
+.header{
+  display: flex;
+   flex-direction: row;
+  margin: 100px;
+  flex-wrap: wrap;
+  justify-content:space-between;
+}
+input{
+  padding: 5px;
+  width: 300px;
+  height: 20px;
+  margin: 10px;
+  border-radius: 5px;
+  text-align: center;
+}
+.butn{
+  font-size: 1.3rem;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 25px;
+}
+td{
+  padding: 15px;
+}
+.algn{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box2{
+  width: 300px;
+  height: 45px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  margin-left: 600px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.butn2{
+  font-size: 20px;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 25w;
+  margin-left: 60px;
 }
